# TranCE_Wyatt

./: .clang-format  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  README_zh.md
res/: res.qrc
src/: Constants.h  main.cpp
src/Controller/: AccountManager.cpp  AccountManager.h  AppController.h  CacheManager.cpp  CacheManager.h  DbManager.cpp  DbManager.h  Setting.cpp  Setting.h  SettingManager.cpp  SettingManager.h  UIController.cpp  UIController.h  UserManager.cpp  UserManager.h
src/Model/: AppSettingModel.cpp  AppSettingModel.h  CacheModel.cpp  CacheModel.h  DbModel.cpp  DbModel.h  DictDbModel.h  UserModel.cpp  UserModel.h  UserStorage.h  toB_implemented.md
src/Utility/: AsyncTask.h  CacheEntry.h  ClickableWidget.h  Constants.h  DbModelFactory.h  Error.h  IUserProfileContextProvider.h  PasswordHasher.cpp  PasswordHasher.h  Result.h  UserAuthResult.h  WordEntry.h
src/View/: AboutPage.cpp  AboutPage.h  HistoryPage.cpp  HistoryPage.h  HomePage.cpp  HomePage.h  LoginPage.cpp  LoginPage.h  MainWindow.cpp  MainWindow.h  MyPage.cpp  MyPage.h  RecitePage.cpp  RecitePage.h  RegisterPage.cpp  RegisterPage.h  SettingPage.cpp  SettingPage.h  StatisticsPage.cpp  StatisticsPage.h  TempPage.cpp  TempPage.h
src/View/Components/: LoginPage.cpp  LoginPage.h  MyPage.cpp  MyPage.h  QuizCard.cpp  QuizCard.h  RegisterPage.cpp  RegisterPage.h  WordCard.cpp  WordCard.h  WordList.cpp  WordList.h
translations/: TranCE_Wyatt_en_US.ts  TranCE_Wyatt_zh_CN.ts
